# iesb-projeto-integrador-ii

./: Makefile  README.md  pyproject.toml
app/analytics/: exploration.ipynb
app/ingestion/: camara.py  deputados.py
docker/: docker-compose.yml
docker/postgres/: docker-compose.yml
docker/postgres/scripts/: create_tables.sql
