[tool.poetry]
name = "iesb-projeto-integrador-ii"
version = "0.1.0"
description = ""
authors = ["borges"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
requests = "^2.32.2"
sqlalchemy = "^2.0.30"
loguru = "^0.7.2"
regex = "^2024.5.15"
mlxtend = "^0.23.1"
psycopg2-binary = "^2.9.9"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
